--- a/src/assets/components/dy-project.html
+++ b/src/assets/components/dy-project.html
@@ -1,82 +1,170 @@
 <template id="dy-project">
 	<style>
-		:host, dy-project {
+		:host {
+			/*--transition-slow: 0.5s ease-in-out;*/
+
+			--perspective-intensity: 16;
+			--tilt: -10deg;
+			--tilt-neg: calc(var(--tilt) * -1);
+
+			--card-shadow: rgba(0, 0, 0, 0.15) 0 1em 4em;
+
 			flex: 1 10rem;
 			padding: 0.5em;
 			width: 30vmax;
 			max-width: 300px;
 			max-height: 100vh;
 
+			font-size: 0.8em;
+
 			position: relative;
-			transition: var(--transition-medium);
+			justify-content: center;
+
+			transform: translateZ(0);
+			transition: var(--transition-slow);
+
+			backface-visibility: hidden;
+			-webkit-font-smoothing: subpixel-antialiased;
+
+			pointer-events: initial;
+		}
+		:host(.focused) {
+			--transition-slow: 0.5s ease-in-out;
+			transform:
+				scale( var(--perspective-intensity) )
+				translateZ(
+					calc( var(--perspective) * ( 1 - var(--perspective-intensity) ) )
+				);
+			z-index: 1;
+		}
+		:host-context(:not(.has-focused-project)):host(:not(.focused)) {
+			cursor: pointer;
+		}
+		:host-context(.has-focused-project):host(:not(.focused)) {
+			/*transform: translateZ(calc(var(--perspective) * (1 - 0.75))) scale(0.75);*/
+			transform: scale(0.75);
 		}
 		:host(.hide) {
 			/*flex: 0;
-		    height: 0;
-		    margin: 0;
-		    padding: 0;*/
-		    flex: 0.5 5rem;
-		    transform: rotateX(-10deg) translateY(50%) rotateX(10deg);
+			height: 0;
+			margin: 0;
+			padding: 0;*/
+			/*flex: 0.5 5rem;*/
+			transform: rotateX(var(--tilt)) translateY(50%) rotateX(var(--tilt-neg));
 			transition: var(--transition-slow);
 
+			cursor: initial;
 			pointer-events: none;
 		}
-		:host(.focused) {
-			z-index: 1;
-		}
 
 
-		:host, :host * {
+		:host, :host > *, :host > * > * {
 			transform-style: preserve-3d;
-			transition: var(--transition-medium);
+		}
+		:host, :host * {
+			transition: var(--transition-slow);
 		}
 		:host(:not(.focused)) * {
 			pointer-events: none;
 		}
 
+		#positioning-wrapper {
+			justify-content: center;
+		}
+		:host(.focused) #positioning-wrapper {
+			height: 100%;
+			transform: translateY(50%);
+		}
+
 		#inner-wrapper {
-			display: block;
+			pointer-events: initial;
+
+			flex-direction: column;
+
 			position: absolute;
-			transform: scale(1) rotateX(-10deg);
+
+			width: 100%;
+
+			transform: scale(1) rotateX(var(--tilt));
 			transform-origin: top;
+
+			transition: var(--transition-slow);
 		}
 		:host(:hover) #inner-wrapper {
 			transform: rotateX(-2.5deg) translateZ(-0.5rem) translateY(-1rem);
 			/*transform: translateZ(0.5rem);*/
 		}
 		:host(.focused) #inner-wrapper {
-			transform: none;
-			transform: rotateX(0) translateZ(var(--perspective));
+			width: 260%;
+			max-width: var(--dy-project-max-width);
+			max-height: var(--dy-project-max-height);
+			transform: translateY(-50%);
 		}
-
-		#inner-wrapper > * {
-			/*filter: drop-shadow(#fff 0 0 4em);*/
-			/*box-shadow: #fff 0 0 4em, #fff 0 0 1em inset;*/
-		}
+		
 		:host(.hide) #inner-wrapper > *,
 		:host-context(.has-focused-project):host(:not(.focused)) #inner-wrapper > * {
-		    opacity: 0.1;
+			opacity: 0.1;
 		}
 
 		#title-wrapper {
-			/*background-color: rgba(255, 255, 255, 0.9);*/
-			font-size: 0.8em;
-			transform: rotateX(10deg);
+			justify-content: space-between;
+			align-items: center;
+
+			min-height: min-content;
+
+			transform: rotateX(var(--tilt-neg));
 			transform-origin: bottom;
 		}
 		:host(:hover) #title-wrapper {
 			transform: none;
 		}
-		h2 {
+		:host(.focused) #title-wrapper {
+			padding: 0.5em 0;
+		}
+		#title-wrapper h2 {
 			color: rgba(0, 0, 0, 0.85);
-			line-height: 1.25;
 			text-shadow: #fff 0 0 1em, #fff 0 0 1em, #fff 0 0 5em, #fff 0 0 5em/*, #fff 0 0 10em*/;
+
+			font-size: 1.2em;
+			line-height: 1.25;
+		}
+		:host(.focused) #title-wrapper h2 {
+			font-size: 1.4em;
+		}
+
+		#close {
+			content: '✖';
+
+			background-color: rgba(255, 255, 255, 0.25);
+			border-radius: 0.5rem;
+			box-shadow: var(--card-shadow);
+
+			display: flex;
+			justify-content: center;
+			align-items: center;
+
+			margin-left: 1em;
+			min-width: 2em;
+			min-height: 2em;
+
+			cursor: pointer;
+			transition: var(--transition-medium);
+		}
+		#close:hover {
+			background-color: rgba(255, 255, 255, 0.5);
+			transform: scale(1.05);
+		}
+		:host(:not(.focused)) #close {
+			opacity: 0;
 		}
 
 		.card {
 			border-radius: 0.5rem;
-			flex-direction: column;
 			overflow: hidden;
+			z-index: 1;
+
+			flex-direction: row;
+
 			transition: var(--transition-medium);
 		}
 		:host(:not(.focused)) .card {
@@ -84,53 +172,97 @@
 			-moz-mask-image: linear-gradient(#fff, #fff 7.5rem, rgba(255, 255, 255, 0.25) 15rem, transparent);
 			mask-image: linear-gradient(#fff, #fff 7.5rem, rgba(255, 255, 255, 0.25) 15rem, transparent);
 		}
+		:host(.focused) .card {
+			box-shadow: var(--card-shadow);
+		}
+
+		#featured-image img {
+			min-height: 0;
+			max-height: 100vh;
+		}
+		:host(.no-featured-image) #featured-image img {
+			min-width: 30vmin;
+			height: 40vmin;
+		}
+		#featured-image img:before {
+			content: attr(alt);
+
+			background-color: #67b7e1;
+			color: rgba(255, 255, 255, 0.5);
+
+			font-size: 1.2em;
+			font-weight: bold;
+			text-align: center;
+			text-indent: 0;
+			text-transform: uppercase;
+
+			display: flex;
+			align-items: center;
+			padding: 1em;
+			height: 100%;
+		}
+		:host(.focused) #featured-image img {
+			width: auto;
+			max-height: calc(var(--dy-project-max-height) - 3rem);
+		}
 
 		#details {
-			background-color: rgba(255, 255, 255, 0.2);
+			background-color: rgba(255, 255, 255, 0.25);
+
 			overflow-y: auto;
+			position: relative;
+
+			min-width: 0;
 		}
+		:host(.focused) #details {
+			flex: 1;
+			min-width: 15rem;
+		}
+		:host(:not(.focused)) #details {
+			flex: 0;
+			opacity: 0;
+		}
+
 		#details-inner {
 			min-height: 100%;
+			height: min-content;
+
 			flex-direction: column;
 			justify-content: space-between;
+
 			padding: var(--padding-small);
+			position: absolute;
 		}
+
 		#dates {
 			justify-content: space-between;
 		}
+
 		#terms {
 			flex-wrap: wrap;
 		}
 
-		/*@media (max-height: 40rem){*/
+		@media (max-width: 40rem){
 			:host(.focused) #inner-wrapper {
-			    margin-left: -80%;
-			    margin-right: -80%;
+				display: block;
+				overflow-y: auto;
+				width: max-content;
 			}
-			:host(.focused) #title-wrapper {
-				margin-bottom: 0.5em;
+			.card {
+				display: block;
 			}
-			:host(.focused) .card {
-				flex-direction: row;
+			#details-inner {
+				position: static;
+				width: 0;
+				min-width: 100%;
 			}
-			:host(.focused) #featured-image {
-				flex: 1;
-			}
-			:host(.focused) #featured-image img {
-				min-height: 40vh;
-			}
-			:host(.focused) #details {
-				flex: 1.5;
-			}
-			:host(:not(.focused)) #details {
-				flex: 0;
-				overflow: hidden;
-			}
-		/*}*/
+		}
 	</style>
+	<div id="positioning-wrapper">
 	<div id="inner-wrapper">
 		<div id="title-wrapper">
 			<a class="link"><h2 id="title"></h2></a>
+			<div id="close">✖</div>
 		</div>
 		<div class="card">
 			<a id="featured-image" class="link"><img></a>
@@ -147,6 +279,7 @@
 			</div>
 		</div>
 	</div>
+	</div>
 </template>
 
 
@@ -154,6 +287,8 @@
 class DYProject extends DYElement {
 	set data(data){
 		const root = this.root
+
+		this._data = data
 		
 		root.updateWithModel({
 			'#title': data.title.rendered,
@@ -170,6 +305,9 @@ class DYProject extends DYElement {
 			})
 		}else{
 			this.addClass('no-featured-image')
+			root.updateWithModel({
+				'img[alt]': data.title.rendered
+			})
 		}
 		this.attr({
 			'data-date': data.meta.projectDate,
@@ -192,29 +330,22 @@ class DYProject extends DYElement {
 			}
 		}
 
-		/*root.find('#details').on('mouseleave', function(){
-			this.animateScrollY(0, undefined, new Promise((resolve) => {
-				this.once('mouseenter', resolve);
-			}))
-		})*/
-
-		/*this.modalize().on('modalize', function(e){
-			const img = root.find('img')[0]
-			Object.assign(e.detail.finalStyle, {
-				width: '100%',
-				maxWidth: (img.naturalWidth * 2.5 || 500) + 'px',
-				//height: '80vh',
-				//maxHeight: 'max-content',
-				height: (img.naturalHeight || 400) + 'px',
-				maxHeight: '80vh',
-			})
-		})*/
-
 		this.on({
-			click(){
-				this.$projects.setFocusedProject(this)
+			click(e){
+				if(!this.hasClass('focused'))
+					this.$projects.setFocusedProject(this)
 			}
 		})
+		root.find('#close').on({
+			click: e => {
+				this.$projects.setFocusedProject()
+				e.stopPropagation()
+			}
+		})
+	}
+
+	get data(){
+		return this._data
 	}
 
 	get $projects(){
