Ensure height calculation on page load and window resize

--- a/src/assets/components/dy-header.html
+++ b/src/assets/components/dy-header.html
@@ -150,7 +150,7 @@ class DYHeader extends DYElement {
 			this.$header.classList[window.scrollY > $('#secondary-menu').clientBottom ? 'add' : 'remove']('sticky')
 		}).throttle(10))*/
 
-		window.on('scroll', (e => {
+		window.on('scroll resize pageload', (e => {
 			//X($header.computedStyle, $header.computedStyle['--main-menu-sticky-height'], parseInt($header.computedStyle['--main-menu-sticky-height']))
 
 			//$header.toggleClass($header.top <= 0, 'sticky')
