--- a/src/assets/components/dy-header.html
+++ b/src/assets/components/dy-header.html
@@ -1,4 +1,7 @@
 <template id="dy-header">
+	<style>
+	@import 'http://localhost:8888/darrylyeo/wp-content/themes/DY/assets/header.css';
+	</style>
 	<nav id="secondary-menu" class="immersive">
 		<ul>
 			<li>
