--- a/src/assets/article.css
+++ b/src/assets/article.css
@@ -71,9 +71,9 @@ article section > h2:after {
 		margin-bottom: -0.5em;
 	}
 }
-article section:hover {
+/*article section:hover {
 	filter: drop-shadow(rgba(255, 255, 255, 0.5) 0 0 0px);
-}
+}*/
 
 
 
