--- a/src/assets/components/dy-project.html
+++ b/src/assets/components/dy-project.html
@@ -372,7 +372,7 @@ class DYProject extends DYElement {
 	}
 
 	get $projects(){
-		return this.closest('dy-projects')
+		return this.closest('dy-projects') || this.getRootNode().host
 	}
 }
 customElements.define('dy-project', DYProject)
