Preserve scope of throttled scrollInView() handler

--- a/src/assets/components/dy-projects.html
+++ b/src/assets/components/dy-projects.html
@@ -127,7 +127,7 @@ class DYProjects extends DYElement {
 				if(e.target === $projectsWrapper)
 					this.setFocusedProject()
 			},
-			scroll: this.scrollInView.throttle()
+			scroll: this.scrollInView.throttle().bind(this)
 		})
 	}
 
