--- a/src/assets/components/dy-projects.html
+++ b/src/assets/components/dy-projects.html
@@ -301,10 +301,10 @@ class DYProjectFilters extends DYElement {
 		for(let $term of root.find('a[rel=tag]')){
 			const filteredElements = $projects.find(':not(.hide)') //this.$DYProjects.isotope.getFilteredItemElements()
 
-			if([...filteredElements].filter($element => $element.matches($term.dataset.selector)).length > 0) // this.$DYProjects.root.find(`${$term.dataset.selector}:not(.isotope-hidden)`).length
-				$term.removeClass('disabled')
-			else
-				$term.addClass('disabled')
+			$term.toggleClass(
+				[...filteredElements].filter($element => $element.matches($term.dataset.selector)).length > 0, // this.$DYProjects.root.find(`${$term.dataset.selector}:not(.isotope-hidden)`).length
+				'disabled'
+			)
 		}
 	}
 
