--- a/src/assets/components/dy-project.html
+++ b/src/assets/components/dy-project.html
@@ -137,7 +137,7 @@
 		}
 		#title-wrapper h2 {
 			color: rgba(0, 0, 0, 0.85);
-			text-shadow: #fff 0 0 1em, #fff 0 0 1em, #fff 0 0 5em, #fff 0 0 5em/*, #fff 0 0 10em*/;
+			text-shadow: #fff 0 0 0.5em, #fff 0 0 1em;
 
 			font-size: 1.2em;
 			line-height: 1.25;
