Use 'page render' instead of 'page load' where appropriate

--- a/src/assets/components/dy-header.html
+++ b/src/assets/components/dy-header.html
@@ -169,7 +169,7 @@ class DYHeader extends DYElement {
 		}).throttle())
 
 
-		window.on('pageload', () => {
+		window.on('pagerender', () => {
 			$header.toggleClass(WP.queryType === 'front-page', 'full', 'immersive')
 			$secondaryMenu.toggleClass(WP.queryType === 'front-page', 'immersive')
 
