--- a/src/assets/components/khan.html
+++ b/src/assets/components/khan.html
@@ -8,7 +8,7 @@
 			margin-left: auto;
 			margin-right: auto;
 			max-width: 100%;
-			width: max-content;
+			width: min-content;
 			text-align: center;
 		}
 		:host > * + * {
@@ -26,8 +26,7 @@
 			position: relative;
 			will-change: transform;
 		}
-		/* Can't combine :host with class selector, doesn't work. */
-		:host:not(.load) #project {
+		:host(:not(.load)) #project {
 			width: 400px;
 			height: 400px;
 		}
