--- a/src/assets/header.css
+++ b/src/assets/header.css
@@ -36,7 +36,7 @@
 
 	flex: 0 auto;
 	justify-content: center;
-	width: 100%;
+	width: var(--site-width);
 	height: var(--main-menu-height);
 
 	transition: var(--transition-slow);
