--- a/src/assets/css.css
+++ b/src/assets/css.css
@@ -78,7 +78,7 @@ body, p, h1, h2, h3, h4, h5, h6, ul, ol, figure, pre, blockquote, hr {
 * + p, * + h1, * + h2, * + h3, * + h4, * + h5, * + h6, article * + ul, * + ol, * + figure, * + pre, * + hr {
 	margin-top: 1em;
 }
-h1, h2, h3, h4, h5, h6, legend {
+h1, h2, h3, h4, h5, h6, legend, dt {
 	font-family: var(--heading-font);
 	font-weight: bold;
 	text-transform: uppercase;
