--- a/src/assets/css.css
+++ b/src/assets/css.css
@@ -219,35 +219,9 @@ main :link:focus, main :visited:focus {
 }
 
 
-[rel=tag] {
-	display: flex;
-	justify-content: center;
-	align-items: center;
 
-	background-color: rgba(255,255,255,.5);
-	border-radius: 1ch;
-	color: rgba(0,0,0,.75);
-	cursor: pointer;
-	font-size: .8em;
-	padding: 0 1.5ch;
-	vertical-align: .15em;
-	line-height: 2;
-	margin: 2px;
-	flex: auto;
-	text-align: center;
-	white-space: nowrap;
 }
-[rel=tag]:hover,
-[rel=tag].active {
-	background-color: var(--accent-1);
-	color: #fff;
 }
-[rel=tag].active {
-	opacity: 1;
-}
-[rel=tag].disabled {
-	background-color: rgba(0, 0, 0, .05);
-	opacity: 0.3;
 }
 
 /*:root.load * {
@@ -305,3 +279,34 @@ body * {
 }
 
 
+.term, [rel=tag] {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	background-color: rgba(255,255,255,.5);
+	border-radius: 1ch;
+	color: rgba(0,0,0,.75);
+	cursor: pointer;
+	font-size: .8em;
+	padding: 0 1.5ch;
+	vertical-align: .15em;
+	line-height: 2;
+	margin: 2px;
+	flex: auto;
+	text-align: center;
+	white-space: nowrap;
+	transition: var(--transition-fast);
+}
+.term:hover, [rel=tag]:hover,
+.term.active, [rel=tag].active {
+	background-color: var(--accent-1);
+	color: #fff;
+}
+.term.active, [rel=tag].active {
+	opacity: 1;
+}
+.term.disabled, [rel=tag].disabled {
+	background-color: rgba(0, 0, 0, .05);
+	opacity: 0.3;
+}
